# backend-recruitment-exercise

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
aws_service/: Dockerfile  dynamodb_service.py  main.py  models.py  rag_client.py  s3_service.py
metrics_lambda/: Dockerfile  build.sh  deploy.py  lambda_function.py
pdf_service/: Dockerfile  main.py  models.py  pdf_processor.py  storage.py
rag_module/: Dockerfile  chunker.py  document_service.py  embeddings.py  llm_service.py  main.py  metrics_client.py  models.py  vector_store.py
