[project]
name = "backend-recruitment-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.97.1",
    "pinecone[client]>=7.3.0",
    "pymupdf>=1.26.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
